--- a/awards/index.html
+++ b/awards/index.html
@@ -64,6 +64,30 @@
 						<hr>
 						
 						<div style="magin-bottom: 15px;">
+							<div class="col-lg-2">
+							</div>
+							<div class="col-lg-1">
+							<p>2019</p>
+							</div>
+							<div class="col-lg-9">
+							<p>Silver Medal in the RSNA Intracranial Hemorrhage Detection 2019.</p>
+							</div>
+						</div>
+						<br class="clearboth">
+
+						<div style="magin-bottom: 15px;">
+							<div class="col-lg-2">
+							</div>
+							<div class="col-lg-1">
+							<p>2018</p>
+							</div>
+							<div class="col-lg-9">
+							<p>9th Place in the RSNA Pneumonia Detection Challenge 2018. Nov 1, 2018. Radiological Society of North America.</p>
+							</div>
+						</div>
+						<br class="clearboth">
+
+						<div style="magin-bottom: 15px;">
 						<div class="col-lg-2">
 						</div>
 						<div class="col-lg-1">
