--- a/projects/index.html
+++ b/projects/index.html
@@ -57,16 +57,36 @@
 						</h2>
 						<hr>
 
-                  <div class="row" id="joint_cfa_demosaicing">
+
+						<div class="row" id="esiCancer">
 							<div class="col-lg-4">
-                     <a href="./joint_cfa_demosaicing/index.html"> <img  src="./joint_cfa_demosaicing/images/teaser.png" style="width: 100%;" alt="Press f5"> </a>		
+									<a href="http://www.ufrgs.br/labsinal/esiCancer/"> <img  src="./esiCancer/esiCancer_cover.png" style="width: 100%;" alt="Press f5"> </a>		
 							</div>
 							<div class="col-lg-8">
-							<h3><a href="./joint_cfa_demosaicing/index.html">Deep Joint Design of Color Filter Arrays and Demosaicing</a></h3>
-							<h4 style="margin-bottom: 5px">Bernardo Henz, Eduardo S. L. Gastal and Manuel M. Oliveira</h4>
-							<p> <b>Computer Graphics Forum 2018</b> </p>
+								<h3><a href="http://www.ufrgs.br/labsinal/esiCancer/">esiCancer: Evolutionary in silico Cancer Simulator</a></h3>
+								<h4 style="margin-bottom: 5px">Darlan C. Minussi, Bernardo Henz, Mariana S. Oliveira, Eduardo C. Filippi-Chiela, Manuel M. Oliveira, and Guido Lenz</h4>
+								<p> <b>Cancer Research, 79 (5), March 1, 2019</b> </p>
 							</div>
 						</div>
+					
+					<div class="row">
+					<div class="col-lg-4">
+					</div>
+					<div class="col-lg-8">
+					<hr>
+					</div>
+					</div>
+
+                  			<div class="row" id="joint_cfa_demosaicing">
+								<div class="col-lg-4">
+										<a href="./joint_cfa_demosaicing/index.html"> <img  src="./joint_cfa_demosaicing/images/teaser.png" style="width: 100%;" alt="Press f5"> </a>		
+								</div>
+								<div class="col-lg-8">
+									<h3><a href="./joint_cfa_demosaicing/index.html">Deep Joint Design of Color Filter Arrays and Demosaicing</a></h3>
+									<h4 style="margin-bottom: 5px">Bernardo Henz, Eduardo S. L. Gastal and Manuel M. Oliveira</h4>
+									<p> <b>Computer Graphics Forum 2018</b> </p>
+								</div>
+							</div>
 						
 						<div class="row">
 						<div class="col-lg-4">
