--- a/publications/index.html
+++ b/publications/index.html
@@ -57,7 +57,13 @@
 						</h2>
 						<hr>
 						<ul>
-                     <li>
+							<li>
+							<h4>esiCancer: Evolutionary in silico Cancer Simulator</h4>
+							<p>Darlan C. Minussi, Bernardo Henz, Mariana S. Oliveira, Eduardo C. Filippi-Chiela, Manuel M. Oliveira, and Guido Lenz</p>
+							<p><b>Cancer Research</b>, 79 (5), March 1, 2019</p>
+							<p>Volume 79 (2019), Number 5, pp. 1010-1013 (ISSN 1538-7445) [DOI]</p>
+							</li>
+             						<li>
 								<h4>Deep Joint Design of Color Filter Arrays and Demosaicing</h4>
 								<p>Bernardo Henz, Eduardo S. L. Gastal and Manuel M. Oliveira</p>
 								<p><b>Computer Graphics Forum</b>, Volume 37 (2), pages 389-399, 2018. ISSN 1467-8659, https://doi.org/10.1111/cgf.13370.</p>
