Adding page about the project "Synthesizing Camera Noise using Generative Adversarial Networks".

--- a/projects/relighting_paintings/index.html
+++ b/projects/relighting_paintings/index.html
@@ -45,7 +45,7 @@
 		<tr>
 			<!-- Author #0 -->
 			<td class="author">
-			  <a href="http://www.inf.ufrgs.br/~bhenz"><span class="author-name">Bernardo Henz</span><br></a>
+			  <a href="https://bernardohenz.github.io/"><span class="author-name">Bernardo Henz</span><br></a>
 			  <a class="author-email" href="mailto:bhenz@inf.ufrgs.br">bhenz@inf.ufrgs.br</a>
 			</td>
 
