--- a/projects/artistic_relighting/index.html
+++ b/projects/artistic_relighting/index.html
@@ -47,7 +47,7 @@
 		<tr>
 			<!-- Author #0 -->
 			<td class="author">
-			  <a href="http://www.inf.ufrgs.br/~bhenz"><span class="author-name">Bernardo Henz</span></a><br>
+			  <a href="https://bernardohenz.github.io"><span class="author-name">Bernardo Henz</span></a><br>
 			  <a class="author-email" href="mailto:bhenz@inf.ufrgs.br">bhenz@inf.ufrgs.br</a>
 			</td>
 
