--- a/projects/synthesizing_noise/index.html
+++ b/projects/synthesizing_noise/index.html
@@ -150,6 +150,7 @@
   <table align="center">
     <tbody><tr>
       <td ><a href="http://www.cnpq.br/" target="_blank"><img style="padding: 0 1em;" src="./images/cnpq.png"></a></td>
+      <td ><a href="https://www.capes.gov.br/" target="_blank"><img style="padding: 0 1em;" height="85px"src="./images/logo-capes.png"></a></td>
       <td > This work was sponsored by CNPq-Brazil (fellowships and grants 312975/2018-0, 436932/2018-0, 423673/2016-5), and financed in part by the Coordenação de Aperfeiçoamento de Pessoal de Nı́vel Superior – Brasil (CAPES) – Finance Code 001. We would like to thank NVIDIA for donating the GeForce GTX Titan X GPU used for this research.</td>
 	  <td ><img style="padding: 0 1em;" height="35px" src="./images/logo-nvidia.png"></td>
     </tr>
