Added pdfs of Synthesizing Camera Noise using Generative Adversarial Networks in the page

--- a/projects/index.html
+++ b/projects/index.html
@@ -57,6 +57,24 @@
 						</h2>
 						<hr>
 
+						<div class="row" id="esiCancer">
+							<div class="col-lg-4">
+									<a href="./synthesizing_noise/index.html"> <img  src="./synthesizing_noise/images/teaser_synt_noise_transp.png" style="width: 100%;" alt="Press f5"> </a>		
+							</div>
+							<div class="col-lg-8">
+								<h3><a href="./synthesizing_noise/index.html">Synthesizing Camera Noise using Generative Adversarial Networks</a></h3>
+								<h4 style="margin-bottom: 5px">Bernardo Henz, Eduardo S. L. Gastal and Manuel M. Oliveira</h4>
+								<p> <b>IEEE Transactions on Visualization and Computer Graphics, 2020</b> </p>
+							</div>
+						</div>
+					
+					<div class="row">
+					<div class="col-lg-4">
+					</div>
+					<div class="col-lg-8">
+					<hr>
+					</div>
+					</div>
 
 						<div class="row" id="esiCancer">
 							<div class="col-lg-4">
