--- a/projects/synthesizing_noise/index.html
+++ b/projects/synthesizing_noise/index.html
@@ -110,7 +110,26 @@
   <h1 id="Downloads">Downloads</h1>
   </div></div></div>
    <h2>Paper</h2>
-   <p>Soon the paper will be made available.</p>
+   <center>
+        <a href="Synthesizing_Camera_Noise_using_Generative_Adversarial_Networks.pdf"><img alt="" src="images/pdf-icon.png"></a> <br>
+        <a href="Synthesizing_Camera_Noise_using_Generative_Adversarial_Networks.pdf">Pre-print Version (23 MB)</a>  <br> <br>
+
+  </center>
+  <p class="disclaimer" style="font-size: x-small; color: #777;">
+    This is the author's version of the work, and it is not for redistribution. The final publication is <a href="https://ieeexplore.ieee.org/document/9149736/keywords" target="_blank">available</a> via the IEEE Transactions on Visualization and Computer Graphics.
+    </p>
+
+    <h2>Additional Material</h2>
+    <p>This material provides implementation and evaluation details, plus additional comparison cases for visual inspection.</p>
+    <br>
+    <center>
+         <a href="Synthesizing_Camera_Noise_using_Generative_Adversarial_Networks_appendices.pdf"><img alt="" src="images/pdf-icon.png"></a> <br>
+         <a href="Synthesizing_Camera_Noise_using_Generative_Adversarial_Networks_appendices.pdf">Additional Material (37.7 MB)</a>  <br> <br>
+ 
+   </center>
+
+   <h2>Code</h2>
+   <p>Soon the code will be made available.</p>
    <!-- <center>
         <a href="deep_joint_design_of_color_filter_arrays_and_demosaicing_pre-print.pdf"><img alt="" src="images/pdf-icon.png"></a> <br>
         <a href="deep_joint_design_of_color_filter_arrays_and_demosaicing_pre-print.pdf">Pre-print Version (7.3 MB)</a>  <br> <br>
@@ -140,11 +159,12 @@
   </p>
   <h2>BibTeX</h2>
   <pre>@article{HenzGastalOliveira_2020,
-    author = {Bernardo Henz, Eduardo S. L. Gastal, Manuel M. Oliveira},
+    author  = {Bernardo Henz, Eduardo S. L. Gastal, Manuel M. Oliveira},
     title   = {Synthesizing Camera Noise using Generative Adversarial Networks},
     journal = {IEEE Transactions on Visualization and Computer Graphics},
-    volume = {},
+    volume  = {},
     year    = {2020},
+    doi     = {10.1109/TVCG.2020.3012120}, 
     }
   </pre>
 
