Removing "and" between authors (when # of authors > 2)

--- a/projects/synthesizing_noise/index.html
+++ b/projects/synthesizing_noise/index.html
@@ -46,7 +46,7 @@
 			  <a class="author-email" href="mailto:bhenz@inf.ufrgs.br">bhenz@inf.ufrgs.br</a>
 			</td>
 
-			<td class="author-separator">and</td>
+			<td class="author-separator"></td>
 
 			<!-- Author #1 -->
 			<td class="author">
@@ -54,7 +54,7 @@
 			  <a class="author-email" href="mailto:eslgastal@inf.ufrgs.br">eslgastal@inf.ufrgs.br</a>
 			</td>
 			
-			<td class="author-separator">and</td>
+			<td class="author-separator"></td>
 
 			<!-- Author #2 -->
 			<td class="author">
