--- a/projects/independent_color_adjustment/index.html
+++ b/projects/independent_color_adjustment/index.html
@@ -47,7 +47,7 @@
 			  <a class="author-email" href="mailto:bhenz@inf.ufrgs.br">bhenz@inf.ufrgs.br</a>
 			</td>
 
-			<td class="author-separator">and</td>
+			<td class="author-separator"></td>
 
 			<!-- Author #1 -->
 			<td class="author">
@@ -55,7 +55,7 @@
 			  <a class="author-email" href="mailto:falimberger@inf.ufrgs.br">falimberger@inf.ufrgs.br</a>
 			</td>
 			
-			<td class="author-separator">and</td>
+			<td class="author-separator"></td>
 
 			<!-- Author #1 -->
 			<td class="author">
