--- a/projects/joint_cfa_demosaicing/index.html
+++ b/projects/joint_cfa_demosaicing/index.html
@@ -37,7 +37,7 @@
 			  <a class="author-email" href="mailto:bhenz@inf.ufrgs.br">bhenz@inf.ufrgs.br</a>
 			</td>
 
-			<td class="author-separator">and</td>
+			<td class="author-separator"></td>
 
 			<!-- Author #1 -->
 			<td class="author">
@@ -45,7 +45,7 @@
 			  <a class="author-email" href="mailto:eslgastal@inf.ufrgs.br">eslgastal@inf.ufrgs.br</a>
 			</td>
 			
-			<td class="author-separator">and</td>
+			<td class="author-separator"></td>
 
 			<!-- Author #2 -->
 			<td class="author">
