--- a/projects/artistic_relighting/index.html
+++ b/projects/artistic_relighting/index.html
@@ -110,11 +110,11 @@
   </div></div></div>
    <h2>Paper</h2>
    <center>
-        <a href="artistic_relighting_pre-print.pdf"><img alt="" src="images/pdf-icon.png"></a> <br>
-        <a href="artistic_relighting_pre-print.pdf">Pre-print Version (21 MB)</a>  <br> <br>
+        <a href="artistic_relighting_pre-print.pdf" target="_blank"><img alt="" src="images/pdf-icon.png"></a> <br>
+        <a href="artistic_relighting_pre-print.pdf" target="_blank">Pre-print Version (21 MB)</a>  <br> <br>
 		<br><br>
-		<a href="artistic_relighting_pre-print_low.pdf"><img alt="" src="images/pdf-icon.png"></a> <br>
-        <a href="artistic_relighting_pre-print_low.pdf">Pre-print Version (low resolution, 2 MB)</a> 
+		<a href="artistic_relighting_pre-print_low.pdf" target="_blank"><img alt="" src="images/pdf-icon.png"></a> <br>
+        <a href="artistic_relighting_pre-print_low.pdf" target="_blank">Pre-print Version (low resolution, 2 MB)</a> 
   </center>
   <p class="disclaimer" style="font-size: x-small; color: #777;">
     This is the author's version of the work. It is posted here by permission of Springer for your personal use. Not for redistribution. The final publication is available at Springer via <a href='http://dx.doi.org/10.1007/s00371-015-1150-7' target='_blank'>http://dx.doi.org/10.1007/s00371-015-1150-7</a>. </p>
