--- a/projects/color_adjustment/index.html
+++ b/projects/color_adjustment/index.html
@@ -118,8 +118,8 @@
   </div></div></div>
    <h2>Paper</h2>
    <center>
-        <a href="color-adjust_preprint.pdf"><img alt="" src="images/pdf-icon.png"></a> <br>
-        <a href="color-adjust_preprint.pdf">Paper (pre-print version)</a>  <br> <br>
+        <a href="color-adjust_preprint.pdf" target="_blank"><img alt="" src="images/pdf-icon.png"></a> <br>
+        <a href="color-adjust_preprint.pdf" target="_blank">Paper (pre-print version)</a>  <br> <br>
 
   </center>
   <h2>Code</h2>
