--- a/projects/independent_color_adjustment/index.html
+++ b/projects/independent_color_adjustment/index.html
@@ -122,11 +122,11 @@
   </div></div></div>
    <h2>Paper</h2>
    <center>
-        <a href="independent-color-adjust_preprint.pdf"><img alt="" src="images/pdf-icon.png"></a> <br>
-        <a href="independent-color-adjust_preprint.pdf">Pre-print Version (26 MB)</a>  <br> <br>
+        <a href="independent-color-adjust_preprint.pdf" target="_blank"><img alt="" src="images/pdf-icon.png"></a> <br>
+        <a href="independent-color-adjust_preprint.pdf" target="_blank">Pre-print Version (26 MB)</a>  <br> <br>
 		<br><br>
-		<a href="independent-color-adjust_preprint_low.pdf"><img alt="" src="images/pdf-icon.png"></a> <br>
-        <a href="independent-color-adjust_preprint_low.pdf">Pre-print Version (low resolution, 2.5 MB)</a>  <br> <br>
+		<a href="independent-color-adjust_preprint_low.pdf" target="_blank"><img alt="" src="images/pdf-icon.png"></a> <br>
+        <a href="independent-color-adjust_preprint_low.pdf" target="_blank">Pre-print Version (low resolution, 2.5 MB)</a>  <br> <br>
 
   </center>
   <p class="disclaimer" style="font-size: x-small; color: #777;">
