--- a/projects/joint_cfa_demosaicing/index.html
+++ b/projects/joint_cfa_demosaicing/index.html
@@ -103,8 +103,8 @@
   </div></div></div>
    <h2>Paper</h2>
    <center>
-        <a href="deep_joint_design_of_color_filter_arrays_and_demosaicing_pre-print.pdf"><img alt="" src="images/pdf-icon.png"></a> <br>
-        <a href="deep_joint_design_of_color_filter_arrays_and_demosaicing_pre-print.pdf">Pre-print Version (7.3 MB)</a>  <br> <br>
+        <a href="deep_joint_design_of_color_filter_arrays_and_demosaicing_pre-print.pdf" target="_blank"><img alt="" src="images/pdf-icon.png"></a> <br>
+        <a href="deep_joint_design_of_color_filter_arrays_and_demosaicing_pre-print.pdf" target="_blank">Pre-print Version (7.3 MB)</a>  <br> <br>
 
   </center>
   <p class="disclaimer" style="font-size: x-small; color: #777;">
