--- a/projects/relighting_paintings/index.html
+++ b/projects/relighting_paintings/index.html
@@ -111,8 +111,8 @@
   </div></div></div>
    <h2>Paper</h2>
    <center>
-        <a href="Relighting of Paintings and Drawings based on Shading-Color Correlation.pdf"><img alt="" src="images/pdf-icon.png"></a> <br>
-        <a href="Relighting of Paintings and Drawings based on Shading-Color Correlation.pdf">Paper (pre-print version)</a>  <br> <br>
+        <a href="Relighting of Paintings and Drawings based on Shading-Color Correlation.pdf" target="_blank"><img alt="" src="images/pdf-icon.png"></a> <br>
+        <a href="Relighting of Paintings and Drawings based on Shading-Color Correlation.pdf" target="_blank">Paper (pre-print version)</a>  <br> <br>
 
   </center>
   
