--- a/projects/synthesizing_noise/index.html
+++ b/projects/synthesizing_noise/index.html
@@ -111,8 +111,8 @@
   </div></div></div>
    <h2>Paper</h2>
    <center>
-        <a href="Synthesizing_Camera_Noise_using_Generative_Adversarial_Networks.pdf"><img alt="" src="images/pdf-icon.png"></a> <br>
-        <a href="Synthesizing_Camera_Noise_using_Generative_Adversarial_Networks.pdf">Pre-print Version (23 MB)</a>  <br> <br>
+        <a href="Synthesizing_Camera_Noise_using_Generative_Adversarial_Networks.pdf" target="_blank"><img alt="" src="images/pdf-icon.png"></a> <br>
+        <a href="Synthesizing_Camera_Noise_using_Generative_Adversarial_Networks.pdf" target="_blank">Pre-print Version (23 MB)</a>  <br> <br>
 
   </center>
   <p class="disclaimer" style="font-size: x-small; color: #777;">
@@ -123,8 +123,8 @@
     <p>This material provides implementation and evaluation details, plus additional comparison cases for visual inspection.</p>
     <br>
     <center>
-         <a href="Synthesizing_Camera_Noise_using_Generative_Adversarial_Networks_appendices.pdf"><img alt="" src="images/pdf-icon.png"></a> <br>
-         <a href="Synthesizing_Camera_Noise_using_Generative_Adversarial_Networks_appendices.pdf">Additional Material (37.7 MB)</a>  <br> <br>
+         <a href="Synthesizing_Camera_Noise_using_Generative_Adversarial_Networks_appendices.pdf" target="_blank"><img alt="" src="images/pdf-icon.png"></a> <br>
+         <a href="Synthesizing_Camera_Noise_using_Generative_Adversarial_Networks_appendices.pdf" target="_blank">Additional Material (37.7 MB)</a>  <br> <br>
  
    </center>
 
