NoiseSynt - fixed link to ieee

--- a/projects/synthesizing_noise/index.html
+++ b/projects/synthesizing_noise/index.html
@@ -116,7 +116,7 @@
 
   </center>
   <p class="disclaimer" style="font-size: x-small; color: #777;">
-    This is the author's version of the work, and it is not for redistribution. The final publication is <a href="https://ieeexplore.ieee.org/document/9149736/keywords" target="_blank">available</a> via the IEEE Transactions on Visualization and Computer Graphics.
+    This is the author's version of the work, and it is not for redistribution. The final publication is <a href="https://ieeexplore.ieee.org/document/9149736" target="_blank">available</a> via the IEEE Transactions on Visualization and Computer Graphics.
     </p>
 
     <h2>Additional Material</h2>
