Added COVis project

--- a/projects/index.html
+++ b/projects/index.html
@@ -57,9 +57,29 @@
 						</h2>
 						<hr>
 
-						<div class="row" id="esiCancer">
+
+						<div class="row" id="covis">
 							<div class="col-lg-4">
-									<a href="./synthesizing_noise/index.html"> <img  src="./synthesizing_noise/images/teaser_synt_noise_transp.png" style="width: 100%;" alt="Press f5"> </a>		
+									<a href="./covis/index.html"> <img  src="./covis/images/teaser1.png" style="width: 100%;" alt="COVis"> </a>		
+							</div>
+							<div class="col-lg-8">
+								<h3><a href="./covis/index.html">COVIs: Supporting Temporal Visual Analysis of Covid-19 Events Usable in Data-Driven Journalism</a></h3>
+								<h4 style="margin-bottom: 5px">Roger A. Leite, Victor Schetinger, Davide Ceneda, Bernardo Henz, Silvia Miksch</h4>
+								<p> <b>IEEE Visualization Conference - Short Papers, 2020</b> </p>
+							</div>
+						</div>
+
+						<div class="row">
+							<div class="col-lg-4">
+							</div>
+							<div class="col-lg-8">
+							<hr>
+							</div>
+							</div>
+
+						<div class="row" id="synt_noise">
+							<div class="col-lg-4">
+									<a href="./synthesizing_noise/index.html"> <img  src="./synthesizing_noise/images/teaser_synt_noise_transp.png" style="width: 100%;" alt="Synt_noise"> </a>		
 							</div>
 							<div class="col-lg-8">
 								<h3><a href="./synthesizing_noise/index.html">Synthesizing Camera Noise using Generative Adversarial Networks</a></h3>
@@ -78,7 +98,7 @@
 
 						<div class="row" id="esiCancer">
 							<div class="col-lg-4">
-									<a href="http://www.ufrgs.br/labsinal/esiCancer/"> <img  src="./esiCancer/esiCancer_cover.png" style="width: 100%;" alt="Press f5"> </a>		
+									<a href="http://www.ufrgs.br/labsinal/esiCancer/"> <img  src="./esiCancer/esiCancer_cover.png" style="width: 100%;" alt="esiCancer"> </a>		
 							</div>
 							<div class="col-lg-8">
 								<h3><a href="http://www.ufrgs.br/labsinal/esiCancer/">esiCancer: Evolutionary in silico Cancer Simulator</a></h3>
@@ -97,7 +117,7 @@
 
                   			<div class="row" id="joint_cfa_demosaicing">
 								<div class="col-lg-4">
-										<a href="./joint_cfa_demosaicing/index.html"> <img  src="./joint_cfa_demosaicing/images/teaser.png" style="width: 100%;" alt="Press f5"> </a>		
+										<a href="./joint_cfa_demosaicing/index.html"> <img  src="./joint_cfa_demosaicing/images/teaser.png" style="width: 100%;" alt="joint_cfa_demosaicing"> </a>		
 								</div>
 								<div class="col-lg-8">
 									<h3><a href="./joint_cfa_demosaicing/index.html">Deep Joint Design of Color Filter Arrays and Demosaicing</a></h3>
