--- a/publications/index.html
+++ b/publications/index.html
@@ -58,12 +58,18 @@
 						<hr>
 						<ul>
 							<li>
+								<h4>COVIs: Supporting Temporal Visual Analysis of Covid-19 Events Usable in Data-Driven Journalism</h4>
+								<p>Roger Leite, Victor Schetinger, Davide Ceneda, Bernardo Henz, Silvia Miksch</p>
+								<p><b>IEEE VIS 2020</b></p>
+								</li>
+
+							<li>
 							<h4>esiCancer: Evolutionary in silico Cancer Simulator</h4>
 							<p>Darlan C. Minussi, Bernardo Henz, Mariana S. Oliveira, Eduardo C. Filippi-Chiela, Manuel M. Oliveira, and Guido Lenz</p>
 							<p><b>Cancer Research</b>, 79 (5), March 1, 2019</p>
 							<p>Volume 79 (2019), Number 5, pp. 1010-1013 (ISSN 1538-7445) [DOI]</p>
 							</li>
-             						<li>
+								<li>
 								<h4>Deep Joint Design of Color Filter Arrays and Demosaicing</h4>
 								<p>Bernardo Henz, Eduardo S. L. Gastal and Manuel M. Oliveira</p>
 								<p><b>Computer Graphics Forum</b>, Volume 37 (2), pages 389-399, 2018. ISSN 1467-8659, https://doi.org/10.1111/cgf.13370.</p>
