Updated bibtex for Synthesizing noise using GANs

--- a/projects/synthesizing_noise/index.html
+++ b/projects/synthesizing_noise/index.html
@@ -144,16 +144,18 @@
   </div></div></div>
   <h2>Citation</h2>
   <p>
-    Bernardo Henz, Eduardo S. L. Gastal, Manuel M. Oliveira. Synthesizing Camera Noise using Generative Adversarial Networks, <b>IEEE Transactions on Visualization and Computer Graphics</b>, ?(?), pp. ??-??, 2020.
+    Bernardo Henz, Eduardo S. L. Gastal, Manuel M. Oliveira. Synthesizing Camera Noise using Generative Adversarial Networks, <b>IEEE Transactions on Visualization and Computer Graphics</b>, 27(3), pp. 2123-2135, 2021.
   </p>
   <h2>BibTeX</h2>
   <pre>@article{HenzGastalOliveira_2020,
     author  = {Bernardo Henz, Eduardo S. L. Gastal, Manuel M. Oliveira},
     title   = {Synthesizing Camera Noise using Generative Adversarial Networks},
     journal = {IEEE Transactions on Visualization and Computer Graphics},
-    volume  = {},
-    year    = {2020},
-    doi     = {10.1109/TVCG.2020.3012120}, 
+    year    = {2021},
+    volume  = {27},
+    number  = {3},
+    pages   = {2123-2135},
+    doi     = {10.1109/TVCG.2020.3012120}
     }
   </pre>
 
