Updated PhD status

--- a/index.html
+++ b/index.html
@@ -68,16 +68,13 @@
 						<p>
 						Bachelor's degree in Computer Science at Universidade Federal de Santa Maria (UFSM) in 2011/2, advised by <a href="http://www-usr.inf.ufsm.br/~pozzer/">Cesar Tadeu Pozzer</a>. </p>
 						<p>
-						Master's degree in Computer Science at Universidade Federal do Rio Grande do Sul (UFRGS) in 2014/1, advised by <a href="http://www.inf.ufrgs.br/~oliveira/">Manuel Menezes de Oliveira Neto</a>. </p>
-						<p>
-						Since 2014/2 I am a PhD student at Universidade Federal do Rio Grande do Sul (UFRGS) in Computer Graphics group.
-						</p>
+						Master' and PhD's degrees in Computer Science at Universidade Federal do Rio Grande do Sul (UFRGS), respectively in 2014/1 and 2020/2, advised by <a href="http://www.inf.ufrgs.br/~oliveira/">Manuel Menezes de Oliveira Neto</a>. </p>
 						<p>
 						Since 2015/2, I am working as a Professor at <a href="http://www.iffarroupilha.edu.br/site/">Instituto Federal Farroupilha</a>.
 						</p>
 						<p>
-						My main interest is the field of image processing, more specifically over image relighting and image composition.
-						However I am also interested in topics like computer vision, computational photography and signal processing.
+						My main interest is the field of computational photography, image processing, and deep learning.
+						However I am also interested in topics like computer vision, visualization and signal processing.
 						</p>
 						<p>
 						Email: <img src="resources/images/cont_em.png" alt="" width="20%"> <br>
