--- a/projects/synthesizing_noise/index.html
+++ b/projects/synthesizing_noise/index.html
@@ -167,11 +167,11 @@
   <div class="h1-shadow-0"><div class="h1-shadow-1"><div class="h1-shadow-2">
   <h1 id="Acknowledgments">Acknowledgments</h1>
   </div></div></div>
+  <p> This work was sponsored by CNPq-Brazil (fellowships and grants 312975/2018-0, 436932/2018-0, 423673/2016-5), and financed in part by the Coordenação de Aperfeiçoamento de Pessoal de Nı́vel Superior – Brasil (CAPES) – Finance Code 001. We would like to thank NVIDIA for donating the GeForce GTX Titan X GPU used for this research.</p>
   <table align="center">
     <tbody><tr>
       <td ><a href="http://www.cnpq.br/" target="_blank"><img style="padding: 0 1em;" src="./images/cnpq.png"></a></td>
       <td ><a href="https://www.capes.gov.br/" target="_blank"><img style="padding: 0 1em;" height="85px"src="./images/logo-capes.png"></a></td>
-      <td > This work was sponsored by CNPq-Brazil (fellowships and grants 312975/2018-0, 436932/2018-0, 423673/2016-5), and financed in part by the Coordenação de Aperfeiçoamento de Pessoal de Nı́vel Superior – Brasil (CAPES) – Finance Code 001. We would like to thank NVIDIA for donating the GeForce GTX Titan X GPU used for this research.</td>
 	  <td ><img style="padding: 0 1em;" height="35px" src="./images/logo-nvidia.png"></td>
     </tr>
   </tbody></table>
